# PC-RL-Core

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  run-tests.py
.github/workflows/: ci.yml  release.yml
.magi-reports/ralph-branch/: balthasar.json  balthasar.raw.json  caspar.json  caspar.prompt.txt  caspar.raw.json  magi-report.json  melchior.json  melchior.raw.json
docs/: apply_config_spec.md  continuous_learning_spec.md  crossover_technical_spec.md  experiment_analysis.md  experiment_cartpole_continuous_spec.md  experiment_pendulum_v1_spec.md  gae_spec.md  generic_action_space_spec.md  pc_actor_critic_paper.md  pc_inference_intuitive_guide.md  pc_rl_core_self_recovery_spec.md  td_n_implementation_plan.md  td_n_spec.md
pc-rl-core/: Cargo.toml
pc-rl-core/src/: layer.rs  lib.rs  matrix.rs  mlp_critic.rs  pc_actor.rs  pc_actor_critic.rs  serializer.rs
pc-rl-core/src/linalg/: cpu.rs  golub_kahan.rs  mod.rs
pc_core/: Cargo.toml
pc_core/src/: activation.rs  error.rs  layer.rs  lib.rs  matrix.rs  mlp_critic.rs  pc_actor.rs  pc_actor_critic.rs  serializer.rs
pc_core/src/linalg/: cpu.rs  mod.rs
pc_tictactoe/: Cargo.toml  config.toml
pc_tictactoe/src/: integration_tests.rs  main.rs
pc_tictactoe/src/env/: minimax.rs  mod.rs  tictactoe.rs
pc_tictactoe/src/training/: continuous.rs  experiment.rs  mod.rs  trainer.rs
pc_tictactoe/src/ui/: cli.rs  mod.rs
pc_tictactoe/src/utils/: config.rs  logger.rs  metrics.rs
planning/: claude-plan-tdd.md
plans/: prd.json  progress.md  qubic_4x4x4_plan.md
sbtdd/: spec-behavior.md
scripts/ralph/: ralph-status.sh  ralph-stop.sh  ralph-tail.sh  ralph.sh
src/: layer.rs  lib.rs  matrix.rs  mlp_critic.rs  pc_actor.rs  pc_actor_critic.rs  serializer.rs
src/linalg/: cpu.rs  golub_kahan.rs  mod.rs
src/pc_actor_critic/: config.rs  control.rs  ewma.rs  fisher.rs  hysteresis.rs  mod.rs  replay.rs  trajectory.rs
tests/: phase1_smoke.rs  phase2_smoke.rs  replay_buffer_smoke.rs
tests/fixtures/: v1_model.json
