[package]
name = "pc-rl-core"
version = "1.2.2"
edition = "2021"
authors = ["Julian Bolivar"]
description = "Predictive Coding Actor-Critic reinforcement learning framework — pure Rust, zero ML dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BolivarTech/PC-RL-Core"
homepage = "https://github.com/BolivarTech/PC-RL-Core"
readme = "README.md"
keywords = ["predictive-coding", "reinforcement", "actor-critic", "neural-network", "machine-learning"]
categories = ["science", "algorithms"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
