[package]
name = "pc-rl-core"
version = "1.2.1"
edition = "2021"
authors = ["Julian Bolivar"]
description = "Predictive Coding Actor-Critic reinforcement learning framework — pure Rust, zero ML dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BolivarTech/PC-RL-Core"
homepage = "https://github.com/BolivarTech/PC-RL-Core"
readme = "../README.md"
keywords = ["predictive-coding", "reinforcement", "actor-critic", "neural-network", "machine-learning"]
categories = ["science", "algorithms"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
chrono.workspace = true
