[package]
name = "pc_tictactoe"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pc_core = { path = "../pc_core" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
chrono.workspace = true
toml = "0.8"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
